OAUTH authentication is added to the student api
