# server.js
@@ -6,24 +6,69 @@ dotenv.config();
 const db = require('./data/database');
 const bodyParser = require('body-parser');
 const routes = require('./routes');
+const passport = require('passport');
+const session = require('express-session');
+const GithubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 
 const port = process.env.PORT || 4001;
 
-app.use(bodyParser.json());
+app
+    .use(bodyParser.json())
+    .use(session({
+        secret: process.env.GITHUB_CLIENT_SECRET,
+        resave: false,
+        saveUninitialized: true
 
-// CORS headers
-app.use((req, res, next) => {
-    res.setHeader("Access-Control-Allow-Origin", "*");
-    res.setHeader(
-        "Access-Control-Allow-Headers",
-        "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization"
-    );
-    res.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
-    next();
+    }))
+    // Basic express session() initialization
+    .use(passport.initialize())
+    // Initialize passport on every route call
+    .use(passport.session())
+    // Allow passport to use express-session
+    .use((req, res, next) => {
+        res.setHeader("Access-Control-Allow-Origin", "*");
+        res.setHeader(
+            "Access-Control-Allow-Headers",
+            "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization"
+        );
+        res.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
+        next();
+    })
+    .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH'] }))
+    .use(cors({ origin: '*' }))
+    .use('/', routes);
+
+passport.use(new GithubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+},
+    function (accessToken, refreshToken, profile, done) {
+        // user.findorcreate({githubId: profile.id}, fucntion(err, user){
+        return done(null, profile);
+        //});
+    }
+));
+
+passport.serializeUser((user, done) => {
+    done(null, user);
 });
 
-// Routes
-app.use('/', routes);
+passport.deserializeUser((user, done) => {
+    done(null, user);
+});
+
+app.get('/', (req, res) => {res.send(req.session.user !==undefined?`Logged in as ${req.session.user.displayName}` : 'Logged Out')});
+
+app.get('/github/callback', passport.authenticate('github',{
+    failureRedirect: '/api-docs', session: false}),
+    (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    }
+);
+
 
 // DB init
 db.initDb()
